# Tester

./: .gitignore  build.gradle  local.properties
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/j300_api/inc/common/: comm_driver.h
app/src/main/cpp/j300_api/inc/esign/: esign.h  esign_util.h
app/src/main/cpp/j300_api/inc/pinpad/: PINPAD.h  j300.h  j300_no_use.h  j300_priv.h  os_string.h  user_type.h  util.h
app/src/main/cpp/j300_api/inc/scan/: barcode_util.h  libbarcode.h
app/src/main/cpp/j300_api/inc/scanner/: barcode.h
app/src/main/cpp/j300_api/src/common/: comm_driver.c
app/src/main/cpp/j300_api/src/esign/: esign.c  esign_util.c
app/src/main/cpp/j300_api/src/pinpad/: PINPAD.c  j300.c  j300_no_use.c  j300_priv.c  os_string.c  util.c
app/src/main/cpp/j300_api/src/scan/: barcode.c  barcode_util.c
app/src/main/cpp/j300_api/src/scanner/: barcode.c
app/src/main/cpp/pos_api/inc/: pos_charge.h  pos_debug.h  pos_file.h  pos_uart.h  pos_usbser.h
app/src/main/cpp/pos_api/smart_pos/: pos_charge.c  pos_debug.c  pos_file.c  pos_uart.c  pos_usbser.c
app/src/main/cpp/pos_api/type/: pos_type.h
app/src/main/java/com/boc/aidl/beeper/: AidlBeeper.aidl
app/src/main/java/com/boc/aidl/cardreader/: AidlCardReader.aidl  AidlCardReaderListener.aidl
app/src/main/java/com/boc/aidl/constant/: Const.java  DeviceErrorCode.java
app/src/main/java/com/test/configuration/: ModuleUIConfig.java  ServiceAccessUIConfig.java  TestConfigManager.java
app/src/main/java/com/test/util/: AndroidUtil.java  DensityUtil.java  DialogUtil.java  FileUtil.java  LogUtil.java  PackageUtil.java  PrinterUtil.java  QrCodeUtil.java  ReflectUtil.java  StrUtil.java  StringUtil.java  SystemUtil.java  TVLog.java  TlvUtil.java  ToastUtil.java
app/src/main/jni/: native-lib.c  ncca_native.c
app/src/main/jni/ncca_native/: kdf.h  log.h  sm.h  sm2.c  sm2_api.c  sm2_api.h  sm2_cert.c  sm2_cert.h  sm3.c  sm4.c  sm_api.c  sm_api.h  sm_cli.c  sm_cli.h  sm_lib.c  sm_lib.h  sm_ssl.c  wifi_perf_client.c  wifi_perf_client.h
app/src/main/res/anim/: animation_test.xml
app/src/main/res/drawable/: developer_ncca_border.xml  overflow_listview_border.xml  textview_border.xml
app/src/main/res/layout/: action_bar.xml  activity_animation_test1.xml  activity_auto_test.xml  activity_base.xml  activity_case_page.xml  activity_developer_test.xml  activity_fragment_example1.xml  activity_fragment_example1_wide.xml  activity_j300_test.xml  activity_main.xml  activity_manual_test.xml  activity_navigation_drawer.xml  activity_nccaload_tek.xml  activity_nccaperformance.xml  activity_nccassltest.xml  activity_nccatest.xml  activity_nccatestalgorithm.xml  activity_qrscan.xml  activity_result_detail.xml  activity_rx_java_test.xml  activity_select.xml  activity_settings.xml  activity_show_test_process.xml  activity_show_test_result.xml  activity_study_test.xml  activity_tab_example.xml  activity_test_my_circle_view.xml  activity_test_my_test_view.xml  activity_test_notification.xml  activity_test_on_measure_onlay.xml  activity_test_scroll_collision1.xml  activity_test_scroll_collision2.xml  activity_test_self_view_pager.xml  activity_test_tools.xml  activity_tool_bar_demon.xml  app_bar_navigation_drawer.xml  comm_toolbar.xml  content_navigation_drawer.xml  expand_item.xml  expand_layout.xml  (+8 more)
app/src/main/res/layout-land/: activity_fragment_example1.xml
app/src/main/res/menu/: menu_main.xml  menu_tab_activity_example.xml
app/src/main/res/values/: arrays.xml  attrs_circle_view.xml  colors.xml  course_arrays.xml  dimens.xml  drawablecolors.xml  strings.xml  styles.xml
app/src/main/res/values-v21/: styles.xml
(+291 files in other folders)
